# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: Elma_side.dae  cube_lit.blend  dragon.dae  dragon_light.dae  emission.blend  stanfordbox.dae
geom/: boundable.h  bounding_box.cpp  bounding_box.h  bounding_volume.h  bounding_volume.tpp  camera.cpp  camera.h  geometry.h  hit_info.cpp  hit_info.h  light_prim.cpp  light_prim.h  ray.h  scene.cpp  scene.h  scene_prim.cpp  scene_prim.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
include/: assimp_file_loader.h  bvh.h  camera.h  collision.h  config.h  config.h.in  cook_torrence.h  dielectric_material.h  disney_principled.h  file_loader.h  image_lib.h  isotropic_material.h  legacy_file_loader.h  material.h  math_helpers.h  matrix.h  random_sampler.h  ray.h  ray_tracer.h  sampler.h  sampling_helpers.h  scene.h  sdesc_file_loader.h  shading_helpers.h  sobol2D.h  structs.h  vec.h
light/: area_light.cpp  area_light.h  direction_light.cpp  direction_light.h  light.h
mat/: cook_torrence.cpp  cook_torrence.h  disney_principled.cpp  disney_principled.h  fresnel.h  glossy.cpp  glossy.h  lambertian.cpp  lambertian.h  material.h  multiple_importance_heuristics.h  random_sampler.cpp  random_sampler.h  sampler.h  sampling_helpers.h  shading_helpers.h  smith_geom.h  sobol2D.cpp  sobol2D.h
math/: constants.h  mat.cpp  mat4.h  math_helpers.h  vec.cpp  vec.h
old/: assimp_file_loader.cpp  assimp_file_loader.h  matrix.cpp  matrix.h  ray.h  scene.h  structs.h  vec.cpp  vec.h
src/: assimp_file_loader.cpp  bvh.cpp  camera.cpp  cook_torrence.cpp  dielectric_material.cpp  disney_principled.cpp  file_loader.cpp  isotropic_material.cpp  legacy_file_loader.cpp  main.cpp  matrix.cpp  random_sampler.cpp  ray_tracer.cpp  scene.cpp  sdesc_file_loader.cpp  sobol2D.cpp  vec.cpp
test/: test_scene_graph_load.cpp
